Fix command chaining in frontend deploy workflow

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: 
-          cd card
+          cd card &&
           npm install
 
       - name: Build frontend
