--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -20,13 +20,11 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: |
-          cd card
+        run: 
           npm install
 
       - name: Build frontend
-        run: |
-          cd card
+        run: 
           npm run build
 
       - name: Configure AWS credentials
