--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -21,13 +21,11 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: |
-          cd card
+        run:
           npm install
 
       - name: Build frontend
-        run: |
-          cd card
+        run:
           npm run build
 
       - name: Configure AWS credentials
@@ -38,5 +36,5 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Sync frontend to S3
-        run: |
+        run: 
           aws s3 sync card/dist s3://${{ secrets.AWS_S3_BUCKET }} --delete
